[package]
name = "dfi_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
rust-rocksdb = { version = "0.30.0", features = [
    "io-uring",
    "jemalloc",
    "serde",
] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
signal-hook = "0.3.17"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
im-rc = { version = "15.1.0", features = ["serde"] }
petgraph = { version = "0.6.5", features = ["serde", "serde-1"] }
regex = "1.11.0"
rustc-hash = "2.0.0"
postcard = { version = "1.0.10", features = ["postcard-derive"] }

[[bin]]
name = "ridx"
path = "src/ridx/main.rs"
