[package]
name = "chain-analyzer"
version = "0.1.0"
edition = "2021"
default-run = "chain-analyzer"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
serde = { version = "1.0.210", features = ["rc", "serde_derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
signal-hook = "0.3.17"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
petgraph = { version = "0.6.5", features = ["serde", "serde-1"] }
regex = "1.11.0"
postcard = { version = "1.0.10", features = ["postcard-derive"] }
atty = "0.2.14"

# Optionals

rust-rocksdb = { version = "0.30.0", features = [
    "io-uring",
    "jemalloc",
    "serde",
], optional = true }
bincode = "1.3.3"
bigdecimal = "0.4.6"

# Others

# tokio = { version = "1.40.0", features = ["full"] }
# im-rc = { version = "15.1.0", features = ["serde"] }
# rustc-hash = "2.0.0"

[[bin]]
name = "legacy"
path = "src/legacy/main.rs"
required-features = ["legacy"]

[features]
default = []
all = ["legacy"]
legacy = ["legacy-rocks", "legacy-sqlite-v1"]
legacy-sqlite-v1 = []
legacy-rocks = ["rust-rocksdb"]
